--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         doloribus fugiat libero, reiciendis alias?</p>
 
 
-        
+
     <title>Document</title>
 </head>
 
@@ -18,6 +18,8 @@
         natus explicabo? Quidem, cumque!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorem consequuntur enim quia esse numquam,
         assumenda distinctio delectus deleniti excepturi.</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ab ipsam voluptatem animi id tempora ea iste
+        consequatur quo quae!</p>
 </body>
 
 </html>
